less/main.less
@projects: rgb(0, 160, 211);
@bio: rgb(223, 146, 75);
@config: rgb(46, 172, 131);

@font-face {
    font-family: 'sinkin_sans400_regular';
    src: url('../assets/fonts/sinkinsans_400/SinkinSans-400Regular-webfont.eot');
    src: url('../assets/fonts/sinkinsans_400/SinkinSans-400Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../assets/fonts/sinkinsans_400/SinkinSans-400Regular-webfont.woff') format('woff'),
         url('../assets/fonts/sinkinsans_400/SinkinSans-400Regular-webfont.ttf') format('truetype'),
         url('../assets/fonts/sinkinsans_400/SinkinSans-400Regular-webfont.svg#sinkin_sans400_regular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'sinkin_sans600_SemiBold';
    src: url('../assets/fonts/sinkinsans_600/SinkinSans-600SemiBold-webfont.eot');
    src: url('../assets/fonts/sinkinsans_600/SinkinSans-600SemiBold-webfont.eot?#iefix') format('embedded-opentype'),
         url('../assets/fonts/sinkinsans_600/SinkinSans-600SemiBold-webfont.woff') format('woff'),
         url('../assets/fonts/sinkinsans_600/SinkinSans-600SemiBold-webfont.ttf') format('truetype'),
         url('../assets/fonts/sinkinsans_600/SinkinSans-600SemiBold-webfont.svg#sinkin_sans400_regular') format('svg');
    font-weight: normal;
    font-style: normal;
}

// general styles

body{
  font-family: 'sinkin_sans400_regular';
  b{
    font-family: 'sinkin_sans600_SemiBold';
  }
  article{
    background-color: #E2E5D8;
    padding: 20px;
    &:focus{
      outline: rgb(201, 201, 201) solid 1px;
    }
  }
}

.main-content{
   margin-top: 60px;
   margin-bottom: 100px;
}

.articles-bottom{
  margin-bottom: 20px;
}

// news
.news{
  #form{
    #title{
      .articles-bottom;
    }
  }
}


// home
.home{
  .action{
    cursor: pointer;
    text-align: center;
    i{
      font-size: 100px;
    }
  }
}

.new{
    cursor: pointer;
   // color: @projects;
    margin-top: 30px;
    font-size: 32px;
    padding-left: 33px;
    color: rgb(132, 142, 163);
}

// action buttons
#save {
  margin-top: 30px;
  width: 80%;
}
#cancel, #delete{
  margin-top: 10px;
  width: 80%;
}

.projects{
  h4{
    // color: @projects;
  }
}

// new project form
.video-preview{
  margin-top: 10px;
}

.item-remove{
  color: #b6222c;
  padding-top: 58px;
  font-size: 22px;
}

#videos{
  padding-left: 0;
  .video{
    margin-bottom: 40px;
    .item-remove{
      padding-top: 0;
      padding-left: 30px;
    }
  }
}

#images{
  .item-remove{
      padding-top: 0;
    }
}

#links{
  input{
    margin-bottom: 10px;
  }
}

#images{
  input{
    margin-bottom: 10px;
  }
}

#exhibitions{
  margin-top: 20px;
  h3{
    margin-bottom: 20px;
  }
  input{
    margin-bottom: 10px;
  }
  .exhibition{
    margin-bottom: 30px;
    .item-remove{
      display: block;
      margin-top: 33px;
    }
  }
}

//project list
#project-list{
  padding-left: 0;
  li{
    list-style: none;
    margin-bottom: 10px;
  }
  a{
    color: #449471;
    text-decoration: none;

    &:hover{
      color: #C4C4C4;
      text-decoration: none;
    }
  }

  .delete{
    color: #b6222c;
    font-size: 14px;
    margin-left: 10px;
    &:hover{
      cursor: pointer;
    }
  }

  .move{
    color: #61b66e;
    font-size: 14px;
    margin-left: 10px;
    &:hover{
      cursor: move;
    }
  }
}

#settings-form{
  h4{
    margin-top: 40px;
    margin-bottom: 20px;
  }
}

